--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -19,5 +19,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="IMC App"/>
+    <Button
+        android:id="@+id/btnToDo"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="To Do App"/>
 
 </LinearLayout>
