SuperHeroe App Searching and start of Details

--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -24,5 +24,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="To Do App"/>
+    <Button
+        android:id="@+id/btnsuperHero"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Superheroe App"/>
 
 </LinearLayout>
