--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -29,5 +29,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Superheroe App"/>
+    <Button
+        android:id="@+id/btnSettings"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Settings"/>
 
 </LinearLayout>
