--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -39,6 +39,6 @@
     <color name="sh_stat_durability">#9BC59D</color>
     <color name="sh_stat_power">#73BFB8</color>
     <color name="sh_stat_combat">#FEC601</color>
-
-
+<!--Settings-->
+    <color name="settings_title">#000000</color>
 </resources>
